src/objects/Apttus_Config2__OrderLineItemMapFields__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds the map between field API names from the order line item object and the associated field API names from the cart line item object, used in calculating dynamic rollup data in incentives. Multiple data sets may be used.</description>
    <fields>
        <fullName>Apttus_Config2__BusinessObjectType__c</fullName>
        <defaultValue>&quot;Proposal&quot;</defaultValue>
        <description>The type of the business object associated with the configuration.

Valid values are the following

Proposal
Agreement
Order</description>
        <inlineHelpText>The type of the business object associated with the configuration.

Valid values are the following

Proposal
Agreement
Order</inlineHelpText>
        <label>Business Object Type</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CartLineItemFieldName__c</fullName>
        <description>The cart line item field name</description>
        <inlineHelpText>The cart line item field name</inlineHelpText>
        <label>Cart LineItem Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderLineItemFieldName__c</fullName>
        <description>The order line item field name.</description>
        <inlineHelpText>The order line item field name.</inlineHelpText>
        <label>Order LineItem Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Order LineItem Map Fields</label>
</CustomObject>